# security-api

./: .coverage  .dockerignore  .env.example  .env.local  .env.production  .gitignore  .pre-commit-config.yaml  README-SIMPLE.md  README.md  docker-compose.yml  init-mongo.js  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: db.py  logging_config.py  schemas.py  security.py  settings.py
app/middleware/: __init__.py  error_handler.py  rate_limiter.py  request_logging.py  simple_rate_limiter.py
app/routers/: health.py  inventario.py
app/services/: http.py  nvd.py  osv.py
mongodb/data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-1109940526985294536.wt  collection-0-4101068080697749152.wt  collection-2-1109940526985294536.wt  collection-4-1109940526985294536.wt  collection-7-1109940526985294536.wt  index-1-1109940526985294536.wt  index-1-4101068080697749152.wt  index-3-1109940526985294536.wt  index-5-1109940526985294536.wt  index-6-1109940526985294536.wt  index-8-1109940526985294536.wt  index-9-1109940526985294536.wt  sizeStorer.wt
mongodb/data/diagnostic.data/: metrics.2026-03-18T15-37-01Z-00000  metrics.2026-03-19T13-22-32Z-00000
n8n-workflows/: N8N-WEB-SETUP.md  README.md  aquiles-security-api-workflow.json  aquiles-workflow-n8n-web.json  test-workflow.bat  test-workflow.sh
security_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  test_api.py  test_schemas.py  test_services.py
